--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,20 @@ body {
 }
 
 .main {
+  padding: 30px 20px;
+  box-sizing: border-box;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 700px;
+  padding: 20px;
+  padding-left: 40px;
 }
